k8s/server-deployment.yaml
# Kubernetes Deployment Configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
# Specify how the Deployment behaves
spec:
  # Define the number of pods
  replicas: 3
  # Define set of Pods to be controlled
  selector:
    matchLabels:
      component: server # This can be anything, "part of app: api" for example
  # Define Pod Template (1 pod per deployment)
  template:
    metadata:
      labels: # Must match label in spec
        component: server
    # Customize Pod Behavior
    spec:
      containers:
        - name: server
          image: czachman/multi-server
          ports:
            - containerPort: 5000
          # Add on required environment variables (in this case for PG and Redis)
