k8s/worker-deployment.yaml
# Kubernetes Deployment Configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
# Specify how the Deployment behaves
spec:
  # Define the number of pods
  replicas: 1
  # Define set of Pods to be controlled
  selector:
    matchLabels:
      component: worker
  # Define Pod Template
  template:
    metadata:
      labels: # Must match label in spec
        component: worker
    # Customize Pod Behavior
    spec:
      containers:
        - name: worker
          image: czachman/multi-worker
          # Add on required environment variables (in this case for PG and Redis)
