k8s/client-cluster-ip-service.yaml
# Kubernetes ClusterIP Service Configuration
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: # Tell this service which set of Pods its supposed to provide access too (use label)
    component: web
  ports:
    - port: 3000 # Service Port: Gives other pods access to the Pods of this Service
      targetPort: 3000 # Container Port: Send any incoming traffic to port 3000 inside pods of this Service
# The selector must match the Pod Label
