k8s/postgres-cluster-ip-service.yaml
# Kubernetes ClusterIP Configuration
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector: # Tell this service which set of Pods its supposed to provide access too (use label)
    component: postgres
  ports:
    - port: 5432 # Service Port: Gives other pods access to the Pods of this Service
      targetPort: 5432 # Container Port: Send any incoming traffic to port 5432 inside pods of this Service
