k8s/redis-cluster-ip-service.yaml
# Kubernetes ClusterIP Service Configuration
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector: # Tell this service which set of Pods its supposed to provide access too (use label)
    component: redis
  ports:
    - port: 6379 # Service Port: Gives other pods access to the Pods of this Service
      targetPort: 6379 # Container Port: Send any incoming traffic to port 6379 inside pods of this Service
