k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # Specify higher level config
    kubernetes.io/ingress.class: nginx # We want to create ingress controller based on nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # Configure how copy of nginx behaves (remove URL extensions - '/api' in this case)
spec:
  rules:
    - http:
        paths:
          # If a request comes in to '/' (or anything else EXCEPT '/api/' in this case)
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          # Requests to this endpoint will be sent to the server pods
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
